--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 		</style>
 	</head>
 	<body>
-		<script src="lib/three.min.js"></script>
-		<script src="ldraw-visualizer-0.0.1.js"></script>
+		<script src="livereload.js"></script>
+		<script src="lib/threejs/three.min.js"></script>
+		<script src="scripts/ldraw-visualizer-0.0.1.js"></script>
 	</body>
 </html>
