--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <html>
 	<head>
 		<title>LDraw Visualizer</title>
-		<style>
-			body { margin: 0; }
-			canvas { width: 100%; height: 100% }
-		</style>
+		<link href="./styles/ldraw-visualizer-0.0.1.css" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
-		<!--<script src="livereload.js"></script>-->
+		<div id="container"></div>
+		
 		<script src="//localhost:35729/livereload.js"></script>
 		<script src="lib/threejs/three.min.js"></script>
+		<script src="lib/threejs/Detector.js"></script>
+		<script src="lib/threejs/OrbitControls.js"></script>
 		<script src="scripts/ldraw-visualizer-0.0.1.js"></script>
 	</body>
 </html>
