better dist build

--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <html>
 	<head>
 		<title>LDraw Visualizer</title>
-		<link href="./styles/ldraw-visualizer-0.0.1.css" rel="stylesheet" type="text/css" />
+		<link href="./styles/ldraw-visualizer.css" rel="stylesheet" type="text/css" />
+		<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" class="dom_munger-ignore">
 	</head>
 	<body>
 		<div id="container"></div>
 		
-		<script src="//localhost:35729/livereload.js"></script>
+		<script class="dom_munger-ignore dom_munger-remove" src="//localhost:35729/livereload.js"></script>
 		<script src="lib/threejs/three.min.js"></script>
 		<script src="lib/threejs/Detector.js"></script>
 		<script src="lib/threejs/OrbitControls.js"></script>
-		<script src="scripts/ldraw-visualizer-0.0.1.js"></script>
+		<script src="scripts/ldraw-visualizer.js"></script>
 	</body>
 </html>
