added ldr parser

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<div id="container"></div>
 		
 		<script class="dom_munger-ignore dom_munger-remove" src="//localhost:35729/livereload.js"></script>
+		<script src="lib/jquery/jquery-2.1.4.min.js"></script>
 		<script src="lib/threejs/three.min.js"></script>
 		<script src="lib/threejs/Detector.js"></script>
 		<script src="lib/threejs/OrbitControls.js"></script>
