--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 		<title>LDraw Visualizer</title>
 		<link href="./styles/ldraw-visualizer.css" rel="stylesheet" type="text/css" />
 		<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" class="dom_munger-ignore">
-		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-		<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'>
+		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" class="dom_munger-ignore">
+		<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css' class="dom_munger-ignore">
 		<style>
 			html, body {
 				font-family: 'Roboto Condensed', sans-serif;
