parts are now treated individually

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 		<script src="compiled/scripts/parser/lines/meta-lines/RotationConfigMETALine.js"></script>
 		<script src="compiled/scripts/parser/lines/meta-lines/RotationStepMETALine.js"></script>
 		<script src="compiled/scripts/parser/lines/meta-lines/StepMETALine.js"></script>
+		<script src="compiled/scripts/parser/lines/meta-lines/LdrawOrgMETALine.js"></script>
 		<script src="compiled/scripts/renderer/ColorLookup.js"></script>
 		<script src="compiled/scripts/renderer/LdrawFileRenderer.js"></script>
 		
