mpd's now working, added support for unofficial parts

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 		<script src="compiled/scripts/parser/lines/meta-lines/RotationStepMETALine.js"></script>
 		<script src="compiled/scripts/parser/lines/meta-lines/StepMETALine.js"></script>
 		<script src="compiled/scripts/parser/lines/meta-lines/LdrawOrgMETALine.js"></script>
+		<script src="compiled/scripts/parser/lines/meta-lines/FileMETALine.js"></script>
+		<script src="compiled/scripts/parser/lines/meta-lines/NoFileMETALine.js"></script>
 		<script src="compiled/scripts/renderer/ColorLookup.js"></script>
 		<script src="compiled/scripts/renderer/LdrawFileRenderer.js"></script>
 		
