smoothing getting close

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 		<script src="compiled/scripts/parser/lines/meta-lines/FileMETALine.js"></script>
 		<script src="compiled/scripts/parser/lines/meta-lines/NoFileMETALine.js"></script>
 		<script src="compiled/scripts/renderer/ColorLookup.js"></script>
+		<script src="compiled/scripts/renderer/EdgeMap.js"></script>
 		<script src="compiled/scripts/renderer/LdrawFileRenderer.js"></script>
 		
 		<script src="compiled/scripts/parser/FileParser.js"></script>
