--- a/test.html
+++ b/test.html
@@ -74,9 +74,9 @@
 					THREE.GeometryUtils.merge(mainGeometry, side);
 				}
 				
-				console.log(mainGeometry.vertices.length);
+				console.log(mainGeometry.faces[2]);
 				mainGeometry.mergeVertices();
-				console.log(mainGeometry.vertices.length);
+				console.log(mainGeometry.faces[2]);
 				
 				// real cylinder
 				mainGeometry = new THREE.CylinderGeometry(50, 50, 200, 8, 1, true)
